@@ -13,4 +13,5 @@
 - createEnd;
 - addWidget: widget X: (int)x Y: (int)y centerFlag: (BOOL)centerFlag;
 - removeWidget: widget;
+- checkGeometry: frame;
 @end
