@@ -1,3 +1,8 @@
+1998-09-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Canvas.[hm], Frame.[hm]: Move assertGeometry to Canvas and
+	call it checkGeometry:.
+
 1998-09-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* internal.m (tkobjc_animate_message): Add support for Win32. 
